--- a/web-app/package.json
+++ b/web-app/package.json
@@ -18,10 +18,14 @@
     "@types/node": "^16.18.14",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-material-ui-carousel": "^3.0.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "styled-components": "^5.3.8",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -51,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
     "ts-node-dev": "^2.0.0"
   }
 }
