--- a/api/.eslintrc.json
+++ b/api/.eslintrc.json
@@ -16,5 +16,6 @@
     "linebreak-style": ["error", "unix"],
     "quotes": ["error", "single"],
     "semi": ["error", "always"]
-  }
+  },
+  "ignorePatterns": ["**/node_modules/*", "**/dist/*"]
 }
