--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "start": "tsx ./src/app.ts",
     "dev": "tsx watch ./src/app.ts",
-    "build": "tsup ./src"
+    "build": "tsup ./src",
+    "db:migrate": "tsup ./src/config/database.config.ts ./src/database/migrations; sequelize db:migrate"
   },
   "dependencies": {
     "@types/dotenv": "^8.2.0",
