--- a/api/package.json
+++ b/api/package.json
@@ -8,10 +8,12 @@
   "scripts": {
     "start": "tsx ./src/app.ts",
     "dev": "tsx watch ./src/app.ts",
-    "build": "tsup ./src"
+    "build": "tsup ./src",
+    "db:migrate": "tsup ./src/config/database.config.ts ./src/database/migrations; sequelize db:migrate"
   },
   "dependencies": {
     "@types/dotenv": "^8.2.0",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
@@ -21,6 +23,7 @@
     "sequelize-typescript": "^2.1.5"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.6",
     "@types/sequelize": "^4.28.14",
