--- a/api/.env.example
+++ b/api/.env.example
@@ -1,6 +1,8 @@
 NODE_ENV=DEVELOPMENT
 APP_PORT=5000
 RESET_DB_TABLES=false
+LOG_DB_QUERIES=false
+JWT_PRIVATE_KEY=your_key
 
 # Development
 DEV_DB_PORT=5432
