--- a/api/package.json
+++ b/api/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "@types/dotenv": "^8.2.0",
     "bcrypt": "^5.1.0",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.29.0",
@@ -25,6 +27,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.14.6",
     "@types/sequelize": "^4.28.14",
     "@types/validator": "^13.7.13",
