--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "start": "tsx ./src/app.ts",
+    "start:build": "node ./dist/app.js",
     "dev": "tsx watch ./src/app.ts",
     "build": "tsup ./src",
     "db:migrate": "tsup ./src/config/database.config.ts ./src/database/migrations; sequelize db:migrate"
