--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@types/dotenv": "^8.2.0",
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
