--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.29.0",
@@ -33,6 +34,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.14.6",
     "@types/sequelize": "^4.28.14",
     "@types/swagger-jsdoc": "^6.0.1",
