--- a/web-app/package.json
+++ b/web-app/package.json
@@ -20,14 +20,12 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.4",
-    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.5",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
-    "react-slick": "^0.29.0",
     "styled-components": "^5.3.8",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -57,9 +55,9 @@
     ]
   },
   "devDependencies": {
-    "@types/yup": "^0.32.0",
-    "yup": "^1.0.2",
     "@types/lodash": "^4.14.191",
-    "ts-node-dev": "^2.0.0"
+    "@types/yup": "^0.32.0",
+    "ts-node-dev": "^2.0.0",
+    "yup": "^1.0.2"
   }
 }
