--- a/api/package.json
+++ b/api/package.json
@@ -11,7 +11,9 @@
     "dev": "tsx watch ./src/app.ts",
     "build": "tsup ./src",
     "db:migrate": "tsup ./src/config/database.config.ts ./src/database/migrations; npx sequelize db:migrate",
-    "db:migrate:undo": "tsup ./src/config/database.config.ts ./src/database/migrations; npx sequelize db:migrate:undo"
+    "db:migrate:undo": "tsup ./src/config/database.config.ts ./src/database/migrations; npx sequelize db:migrate:undo",
+    "db:seed:all": "tsup ./src/config/database.config.ts ./src/database/seeders; npx sequelize db:seed:all",
+    "db:seed:undo:all": "tsup ./src/config/database.config.ts ./src/database/seeders; npx sequelize db:seed:undo:all"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
