--- a/web-app/package.json
+++ b/web-app/package.json
@@ -59,5 +59,7 @@
     "@types/yup": "^0.32.0",
     "ts-node-dev": "^2.0.0",
     "yup": "^1.0.2"
-  }
+  },
+  "main": "index.js",
+  "license": "MIT"
 }
