#30-feat: initial default seeders

--- a/api/package.json
+++ b/api/package.json
@@ -13,9 +13,11 @@
     "db:migrate": "tsup ./src/config/database.config.ts ./src/database/migrations; npx sequelize db:migrate",
     "db:migrate:undo": "tsup ./src/config/database.config.ts ./src/database/migrations; npx sequelize db:migrate:undo",
     "db:seed:all": "tsup ./src/config/database.config.ts ./src/database/seeders; npx sequelize db:seed:all",
-    "db:seed:undo:all": "tsup ./src/config/database.config.ts ./src/database/seeders; npx sequelize db:seed:undo:all"
+    "db:seed:undo:all": "tsup ./src/config/database.config.ts ./src/database/seeders; npx sequelize db:seed:undo:all",
+    "db:seed:unique": "tsup ./src/config/database.config.ts ./src/database/seeders; npx sequelize db:seed --seed"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.0.2",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "date-fns": "^2.29.3",
