--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^8.0.2",
+    "@types/uuid": "^9.0.1",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "date-fns": "^2.29.3",
@@ -31,7 +32,8 @@
     "sequelize": "^6.29.0",
     "sequelize-typescript": "^2.1.5",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^4.6.2"
+    "swagger-ui-express": "^4.6.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
