--- a/web-app/package.json
+++ b/web-app/package.json
@@ -14,6 +14,7 @@
     "@react-pdf-viewer/full-screen": "^3.12.0",
     "@react-pdf-viewer/page-navigation": "^3.12.0",
     "@react-pdf-viewer/scroll-mode": "^3.12.0",
+    "@react-pdf-viewer/zoom": "^3.12.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
