--- a/web-app/package.json
+++ b/web-app/package.json
@@ -10,6 +10,11 @@
     "@mui/material": "^5.13.6",
     "@mui/styled-engine": "^5.11.11",
     "@mui/styled-engine-sc": "^5.11.11",
+    "@react-pdf-viewer/core": "3.12.0",
+    "@react-pdf-viewer/full-screen": "^3.12.0",
+    "@react-pdf-viewer/page-navigation": "^3.12.0",
+    "@react-pdf-viewer/scroll-mode": "^3.12.0",
+    "@react-pdf-viewer/zoom": "^3.12.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,6 +24,7 @@
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.4",
     "js-cookie": "^3.0.5",
+    "pdfjs-dist": "3.4.120",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.5",
