--- a/web-app/package.json
+++ b/web-app/package.json
@@ -22,12 +22,14 @@
     "@types/js-cookie": "^3.0.3",
     "@types/node": "^16.18.14",
     "@types/react-dom": "^18.0.11",
+    "@types/react-lottie": "^1.2.6",
     "axios": "^1.3.4",
     "js-cookie": "^3.0.5",
     "pdfjs-dist": "3.4.120",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.5",
+    "react-lottie": "^1.2.3",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
