--- a/web-app/package.json
+++ b/web-app/package.json
@@ -24,9 +24,11 @@
     "@types/react-dom": "^18.0.11",
     "@types/react-lottie": "^1.2.6",
     "axios": "^1.3.4",
+    "blurhash": "^2.0.5",
     "js-cookie": "^3.0.5",
     "pdfjs-dist": "3.4.120",
     "react": "^18.2.0",
+    "react-blurhash": "^0.3.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.5",
     "react-lottie": "^1.2.3",
