--- a/web-app/package.json
+++ b/web-app/package.json
@@ -43,12 +43,15 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "storybook dev -p 6006",
+    "storybook:build": "storybook build"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:storybook/recommended"
     ]
   },
   "browserslist": {
@@ -64,12 +67,31 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.3.1",
+    "@storybook/addon-interactions": "^7.3.1",
+    "@storybook/addon-links": "^7.3.1",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/blocks": "^7.3.1",
+    "@storybook/preset-create-react-app": "^7.3.1",
+    "@storybook/react": "^7.3.1",
+    "@storybook/react-webpack5": "^7.3.1",
+    "@storybook/testing-library": "^0.2.0",
     "@types/lodash": "^4.14.191",
     "@types/react": "^18.2.13",
     "@types/yup": "^0.32.0",
+    "babel-plugin-named-exports-order": "^0.0.2",
+    "eslint-plugin-storybook": "^0.6.13",
+    "msw": "^1.2.3",
+    "msw-storybook-addon": "^1.8.0",
+    "prop-types": "^15.8.1",
+    "storybook": "^7.3.1",
     "ts-node-dev": "^2.0.0",
+    "webpack": "^5.88.2",
     "yup": "^1.0.2"
   },
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "msw": {
+    "workerDirectory": "public"
+  }
 }
