#50-feat: create event to pending solicitations and integrate solicitations with acquisitions

--- a/api/.eslintrc.json
+++ b/api/.eslintrc.json
@@ -12,6 +12,7 @@
   },
   "plugins": ["@typescript-eslint", "prettier"],
   "rules": {
+    "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "linebreak-style": ["error", "unix"],
     "quotes": ["error", "single"],
