feat(theme): adjusting font sizes and family

--- a/mobile-app/app.json
+++ b/mobile-app/app.json
@@ -39,7 +39,8 @@
       "tsconfigPaths": true
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-font"
     ]
   }
 }
