feat: sigin and signup pages

--- a/mobile-app/app.json
+++ b/mobile-app/app.json
@@ -32,7 +32,7 @@
     },
     "web": {
       "bundler": "metro",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/favicon.svg"
     },
     "experiments": {
       "typedRoutes": true,
