--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -35,8 +35,9 @@
     "prettier": "^3.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.49.3",
+    "react-hook-form": "^7.53.0",
     "react-native": "0.74.5",
+    "react-native-document-picker": "^9.3.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
@@ -44,6 +45,7 @@
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.6",
     "react-query": "^3.39.3",
+    "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.8",
     "zod": "^3.22.4"
   },
