--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -26,6 +26,8 @@
     "eslint-plugin-react-native": "^4.1.0",
     "expo": "^51.0.26",
     "expo-constants": "~16.0.2",
+    "expo-document-picker": "^12.0.2",
+    "expo-file-system": "^17.0.1",
     "expo-font": "~12.0.9",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
