--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -26,6 +26,8 @@
     "eslint-plugin-react-native": "^4.1.0",
     "expo": "^51.0.26",
     "expo-constants": "~16.0.2",
+    "expo-document-picker": "^12.0.2",
+    "expo-file-system": "^17.0.1",
     "expo-font": "~12.0.9",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
@@ -35,7 +37,7 @@
     "prettier": "^3.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.49.3",
+    "react-hook-form": "^7.53.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
@@ -44,6 +46,7 @@
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.6",
     "react-query": "^3.39.3",
+    "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.8",
     "zod": "^3.22.4"
   },
