--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@config-plugins/react-native-blob-util": "^8.0.0",
+    "@config-plugins/react-native-pdf": "^8.0.0",
     "@gorhom/bottom-sheet": "^4.6.0",
     "@hookform/resolvers": "^3.3.4",
     "@react-native-async-storage/async-storage": "1.23.1",
@@ -26,6 +28,7 @@
     "eslint-plugin-react-native": "^4.1.0",
     "expo": "^51.0.26",
     "expo-constants": "~16.0.2",
+    "expo-dev-client": "~4.0.26",
     "expo-document-picker": "^12.0.2",
     "expo-file-system": "^17.0.1",
     "expo-font": "~12.0.9",
@@ -33,13 +36,16 @@
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.21",
     "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.24",
     "lottie-react-native": "6.7.0",
     "prettier": "^3.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.0",
     "react-native": "0.74.5",
+    "react-native-blob-util": "^0.19.11",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-pdf": "^6.7.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
