--- a/api/vercel.json
+++ b/api/vercel.json
@@ -3,13 +3,13 @@
   "builds": [
     {
       "src": "src/app.ts",
-      "use": "@now/node"
+      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "(.*)",
-      "dest": "dist/app.js"
+      "dest": "src/app.ts"
     }
   ]
 }
