--- a/api/.env.example
+++ b/api/.env.example
@@ -4,6 +4,7 @@ SSL=true
 RESET_DB_TABLES=false
 LOG_DB_QUERIES=false
 JWT_PRIVATE_KEY=5f72ed38-40c4-4bc2-9dba-5640aaf42ab0
+BLOB_READ_WRITE_TOKEN=5f72ed38-40c4-4bc2-9dba-5640aaf42ab0
 
 # Development
 DEV_DB_PORT=5432
